tests/snapshots/sfc/ts/patches__setuplet_assignment_in_click_handler.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 196
expression: ts_output
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

let count = $ref(0)

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("button", {
      onClick: _cache[0] || (_cache[0] = ($event: any) => (count.value = _unref(count) + 1))
    }, _toDisplayString(_unref(count)), 1 /* TEXT */))
}
}

})
